--- a/OpenWheaterMap/Module/WeaterMap/User Interface/View/WeaterMap.storyboard
+++ b/OpenWheaterMap/Module/WeaterMap/User Interface/View/WeaterMap.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Wheater Map View Controller-->
+        <!--Weater Map View Controller-->
         <scene sceneID="oxg-ZE-4aX">
             <objects>
-                <viewController storyboardIdentifier="WheaterMapViewController" id="C24-Te-QxF" customClass="WheaterMapViewController" customModule="OpenWheaterMap" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WeaterMapViewController" id="C24-Te-QxF" customClass="WeaterMapViewController" customModule="OpenWheaterMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="G85-OF-KVu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
